--- a/Página Web/Login/index.html
+++ b/Página Web/Login/index.html
@@ -3,14 +3,26 @@
 <head>
 	<title>Login Form</title>
 	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="main.js">
+	<link rel="icon" type="image/png" href="img/ball.svg">
+	<script src="https://kit.fontawesome.com/1064b89e8e.js" crossorigin="anonymous"></script>
 </head>
 <body>
+
+	<button id="switch" class="switch" >
+		<span>
+			<i class="fa-sharp fa-solid fa-moon"></i>
+		</span>
+		<span>
+			<i class="fa-solid fa-sun"></i>
+		</span>
+	</button>
+
+	
 	<div class="box">
 		<form autocomplete="off">
 			<h2>Iniciar Sesión</h2>
 			<div class="inputBox">
-				<input type="username" required="required"
+				<input type="text" required="required"
 				id="usuario">
 				<span>Usuario</span>
 				<i></i>
@@ -30,5 +42,6 @@
 			</div>
 		</form>
 	</div>
+	<script src="main.js"></script>
 </body>
 </html>
