--- a/Página Web/Login/index.html
+++ b/Página Web/Login/index.html
@@ -7,7 +7,6 @@
 	<script src="https://kit.fontawesome.com/1064b89e8e.js" crossorigin="anonymous"></script>
 </head>
 <body>
-
 	<button id="switch" class="switch" >
 		<span>
 			<i class="fa-sharp fa-solid fa-moon"></i>
@@ -16,20 +15,19 @@
 			<i class="fa-solid fa-sun"></i>
 		</span>
 	</button>
-
 	
 	<div class="box">
-		<form autocomplete="off">
+		<form autocomplete="off" id="loginForm">
 			<h2>Iniciar Sesión</h2>
 			<div class="inputBox">
-				<input type="text" required="required"
-				id="usuario">
+				<input type="text" 
+				id="usuario" required="required">
 				<span>Usuario</span>
 				<i></i>
 			</div>
 			<div class="inputBox">
-				<input type="password" required="required"
-				id="contraseña">
+				<input type="password" 
+				id="contraseña" required="required">
 				<span>Contraseña</span>
 				<i></i>
 			</div>
